; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_submodule.c_git_submodule_set_fetch_recurse_submodules.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_submodule.c_git_submodule_set_fetch_recurse_submodules.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_sm_recurse_map = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"fetchRecurseSubmodules\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_submodule_set_fetch_recurse_submodules(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %3
  %10 = load i8*, i8** %5, align 8
  %11 = icmp ne i8* %10, null
  br label %12

12:                                               ; preds = %9, %3
  %13 = phi i1 [ false, %3 ], [ %11, %9 ]
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = load i32*, i32** %4, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = load i32, i32* @_sm_recurse_map, align 4
  %19 = load i32, i32* @_sm_recurse_map, align 4
  %20 = call i32 @ARRAY_SIZE(i32 %19)
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @write_mapped_var(i32* %16, i8* %17, i32 %18, i32 %20, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %21)
  ret i32 %22
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @write_mapped_var(i32*, i8*, i32, i32, i8*, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
